Fixed wrong cropping settings

--- a/web/static/styles/style.css
+++ b/web/static/styles/style.css
@@ -128,6 +128,7 @@ li {
 }
 
 .slider {
+    margin-top: 10px;
     margin-left: 10px;
     -webkit-appearance: none;
     width: 50%;
